include source editor and refactor backend, implement saving files
